hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/compiling_error.txt
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:3:7: error: unknown type name 'GLfloat'; did you mean 'float'?
const GLfloat vpoint_buffer[] = {
      ^~~~~~~
      float
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:9:2: error: invalid preprocessing directive
#version 330
 ^
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:10:1: error: unknown type name 'in'
in vec3 vpoint;
^
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:10:8: error: expected ';' after top level declarator
in vec3 vpoint;
       ^
       ;
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:11:1: error: 'main' must return 'int'
void main(){
^~~~
int
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:12:5: error: use of undeclared identifier 'gl_Position'
    gl_Position = vec4(vpoint, 1.0);
    ^
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:12:24: error: use of undeclared identifier 'vpoint'
    gl_Position = vec4(vpoint, 1.0);
                       ^
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:16:2: error: invalid preprocessing directive
#version 330 core
 ^
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:17:1: error: unknown type name 'out'
out vec3 color;
^
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:17:9: error: expected ';' after top level declarator
out vec3 color;
        ^
        ;
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:18:1: error: 'main' must return 'int'
void main(){
^~~~
int
/Users/r11/Documents/sem6/intro_graph/hw2-Badoux-Lang-Mulakhel/hw2p1_spiral/main.cpp:19:5: error: use of undeclared identifier 'color'
    color = vec3(1.0, 0.0, 0.0);
    ^
12 errors generated.
